--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Солнечные батареи GreenCorp</title>
-   <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600;700;800&display=swap"
       rel="stylesheet">
+   <link rel="stylesheet" href="css/main.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -20,12 +25,12 @@
       </div>
    </header>
    <section class="about">
-      <div class="about__info">
+      <div class="about__info animate__animated animate__fadeInLeft">
          <h1>Солнечные панели GreenRobotic</h1>
          <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
-         <button>Узнать подробнее</button>
+         <button>Узнать подробнее <i class="fa-solid fa-angle-right"></i></button>
       </div>
-      <div class="about__images">
+      <div class="about__images animate__animated animate__fadeInRight">
          <img class="about__sun-image" src="img/sun.png">
          <img class="about__image" src="img/solar-panel.png">
       </div>
@@ -64,7 +69,7 @@
          </form>
       </div>
    </section>
-   <futter>
+   <footer>
       <div class="footer__container">
          <div class="footer__group">
             <h3>Позвонить нам:</h3>
@@ -88,10 +93,11 @@
             </div>
          </div>
       </div>
-      <div class="footer__copyright">GreenCorp © 2022
-
+      <div class="footer__copyright">
+         GreenCorp © 2022
       </div>
-   </futter>
+   </footer>
+   <script src="/fa/js/all.min.js"></script>
 </body>
 
 </html>
